# Scaffolding-Cpp-WithAgents

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  vcpkg.json
cmake/: CompilerOptions.cmake
docs/: vcpkg-dependency-issues.md
docs/architecture/: project-structure.md
scripts/: build.bat  build.sh  config.bat
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  main_test.cpp
